--- a/src/include/CMakeLists.txt
+++ b/src/include/CMakeLists.txt
@@ -11,7 +11,8 @@ set ( _incl_files fftx3.hpp fftx3utilities.h doxygen.config )
 list ( APPEND _incl_files cpubackend.hpp cudabackend.hpp dftbatlib.hpp fftxfft.hpp
                           hipbackend.hpp interface.hpp mddftlib.hpp mdprdftlib.hpp
                           transformlib.hpp )
-list ( APPEND _incl_files batch1ddftObj.hpp ibatch1ddftObj.hpp mddftObj.hpp imddftObj.hpp mdprdftObj.hpp imdprdftObj.hpp)
+list ( APPEND _incl_files batch1ddftObj.hpp ibatch1ddftObj.hpp )
+list ( APPEND _incl_files data_interaction.hpp mddftObj.hpp imddftObj.hpp mdprdftObj.hpp imdprdftObj.hpp)
 
 install ( FILES ${_incl_files}
           DESTINATION ${CMAKE_INSTALL_PREFIX}/include )
