added testbatch1ddft example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,7 +18,9 @@ project ( examples )
 ##                  subdir name   CPU       GPU
 
 manage_add_subdir ( mddft         TRUE      TRUE )
-manage_add_subdir ( mdprdft       TRUE      TRUE )
+manage_add_subdir (batch1ddft       TRUE    TRUE)
+manage_add_subdir ( mdprdft         TRUE      TRUE )
+manage_add_subdir ( hockney       TRUE      FALSE )
 
 manage_add_subdir ( rconv         TRUE      TRUE )
 manage_add_subdir ( verify        TRUE      TRUE )
