--- a/.github/workflows/build-sphinx.yml
+++ b/.github/workflows/build-sphinx.yml
@@ -91,10 +91,9 @@ jobs:
       env:
         SPIRAL_HOME: ${{ github.workspace }}/spiral
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: echo "Convert FFTX README.md to RST file in docs folder"
-      - uses: docker://pandoc/core:2.9
-        with:
-          args: "-f gfm -t rst -o docs/README.rst README.md"
+      run: |
+        echo "Convert FFTX README.md to RST file in docs folder"
+        docker run --rm -v $SPIRAL_HOME:/github/workspace pandoc/core:2.9 -f gfm -t rst -o /github/workspace/docs/README.rst README.md
 
     - name: build the docs
       env:
