tweak yaml; update Doxygen options

--- a/.github/workflows/build-sphinx.yml
+++ b/.github/workflows/build-sphinx.yml
@@ -98,6 +98,9 @@ jobs:
         echo "Convert FFTX README.md to RST file in docs folder"
         docker run --rm -v $SPIRAL_HOME:/github/workspace pandoc/core:2.9 -f gfm -t rst -o /github/workspace/docs/README.rst /github/workspace/README.md
 
+    - name: Move README.rst to docs folder
+      run: mv /github/workspace/docs/README.rst /github/workspace/docs/
+
     - name: build the docs
       env:
         SPIRAL_HOME: ${{ github.workspace }}/spiral
