--- a/.github/workflows/build-sphinx.yml
+++ b/.github/workflows/build-sphinx.yml
@@ -96,7 +96,8 @@ jobs:
         cd $SPIRAL_HOME/../fftx
         ls -l README.md
         echo "Convert FFTX README.md to RST file in docs folder"
-        docker run --rm -v $SPIRAL_HOME:/github/workspace pandoc/core:2.9 -f gfm -t rst -o /github/workspace/docs/README.rst /github/workspace/README.md
+        ##  docker run --rm -v $SPIRAL_HOME:/github/workspace pandoc/core:2.9 -f gfm -t rst -o /github/workspace/docs/README.rst /github/workspace/README.md
+        docker run --rm -v $SPIRAL_HOME:/github/workspace -w /github/workspace pandoc/core:2.9 -f gfm -t rst -o /github/workspace/docs/README.rst README.md
 
     - name: Move README.rst to docs folder
       run: mv /github/workspace/docs/README.rst /github/workspace/docs/
