--- a/.github/workflows/build-sphinx.yml
+++ b/.github/workflows/build-sphinx.yml
@@ -93,11 +93,11 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         set -x
-        cd $SPIRAL_HOME/../fftx
+        cd $FFTX_HOME
         echo "Convert FFTX README.md to RST file in docs folder"
         docker run --rm -v $SPIRAL_HOME:/github/workspace -w /github/workspace pandoc/core:2.9 -f gfm -t rst -o /github/workspace/docs/README.rst README.md
         docker run -w /github/workspace pandoc/core:2.9 -f gfm -t rst -o docs/README.rst README.md
-        ##  cp -p /github/workspace/docs/README.rst README.md
+        cp -p /github/workspace/docs/README.rst README.md
 
     - name: build the docs
       env:
