--- a/.github/workflows/build-sphinx.yml
+++ b/.github/workflows/build-sphinx.yml
@@ -87,20 +87,36 @@ jobs:
         cmake .. 
         make -j 2 install
 
+    - name: Copy README.md to Docker container
+      run: docker cp /github/workspace/fftx/README.md CONTAINER_ID:/github/workspace/README.md
+      env:
+        CONTAINER_ID: ${{ steps.create_container.outputs.CONTAINER_ID }}
+
     - name: Generate RST from markdown
       env:
-        FFTX_HOME: ${{ github.workspace }}/fftx
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        CONTAINER_ID: ${{ steps.create_container.outputs.CONTAINER_ID }}
       run: |
         set -x
-        cd $FFTX_HOME
-        ls -l README.md docs
         echo "Convert FFTX README.md to RST file in docs folder"
-        ##  docker run --rm -v $SPIRAL_HOME:/github/workspace -w /github/workspace pandoc/core:2.9 -f gfm -t rst -o /github/workspace/docs/README.rst README.md
-        docker run -w $FFTX_HOME pandoc/core:2.9 -f gfm -t rst -o docs/README.rst README.md
-        ls -l docs/README.rst
-        cp -p /github/workspace/docs/README.rst README.md
-        ls -l docs/README.rst
+        docker exec $CONTAINER_ID pandoc -f gfm -t rst -o /github/workspace/docs/README.rst /github/workspace/README.md
+
+    - name: Copy README.rst from Docker container to host
+      run: docker cp CONTAINER_ID:/github/workspace/docs/README.rst /github/workspace/docs/
+
+    ##  - name: Generate RST from markdown
+    ##    env:
+    ##      FFTX_HOME: ${{ github.workspace }}/fftx
+    ##      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    ##    run: |
+    ##      set -x
+    ##      cd $FFTX_HOME
+    ##      ls -l README.md docs
+    ##      echo "Convert FFTX README.md to RST file in docs folder"
+    ##      ##  docker run --rm -v $SPIRAL_HOME:/github/workspace -w /github/workspace pandoc/core:2.9 -f gfm -t rst -o /github/workspace/docs/README.rst README.md
+    ##      docker run -w $FFTX_HOME pandoc/core:2.9 -f gfm -t rst -o docs/README.rst README.md
+    ##      ls -l docs/README.rst
+    ##      cp -p /github/workspace/docs/README.rst README.md
+    ##      ls -l docs/README.rst
 
     - name: build the docs
       env:
