cleaned up sphinx script

--- a/.github/workflows/build-sphinx.yml
+++ b/.github/workflows/build-sphinx.yml
@@ -22,37 +22,12 @@ jobs:
         ref: develop
         path: spiral
         
-    - name: Checkout repo spiral-package-fftx
-      uses: actions/checkout@v2
-      with:
-        repository: spiral-software/spiral-package-fftx
-        path: spiral/namespaces/packages/fftx
-        
-    - name: Checkout repo spiral-package-simt
-      uses: actions/checkout@v2
-      with:
-        repository: spiral-software/spiral-package-simt
-        path: spiral/namespaces/packages/simt
-        
-    - name: Checkout repo spiral-package-jit
-      uses: actions/checkout@v2
-      with:
-        repository: spiral-software/spiral-package-jit
-        path: spiral/namespaces/packages/jit
-        
-    - name: Checkout repo spiral-package-mpi
-      uses: actions/checkout@v2
-      with:
-        repository: spiral-software/spiral-package-mpi
-        path: spiral/namespaces/packages/mpi
-
     - name: install dependencies
       ##  uses: actions/checkout@v2
       run: |
         set -x
         echo "working dir = ${{ github.workspace }}"
         ls -l spiral
-        ls -l spiral/namespaces/packages
         export DEBIAN_FRONTEND=noninteractive
         sudo apt-get -qqq update
         sudo apt-get install -y build-essential ca-certificates cmake pkg-config wget
@@ -64,6 +39,8 @@ jobs:
         pip install sphinx_rtd_theme 
         pip install breathe
         sudo apt-get install -y doxygen
+        sudo apt-get install -y graphviz
+        sudo apt-get install -y pandoc
         sudo curl -L -o /usr/local/bin/cmake-easyinstall https://git.io/JvLxY
         sudo chmod a+x /usr/local/bin/cmake-easyinstall
         export CEI_SUDO="sudo"
@@ -91,12 +68,23 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         set -x
-        PATH=$PATH:/home/runner/.local/bin
         echo $PATH
+        which dot
+        which pandoc
+        which doxygen
+        PATH=$PATH:/home/runner/.local/bin
         cd $SPIRAL_HOME/../fftx
+        pandoc --from=markdown --to=rst --output=docs/README.rst README.md
         mkdir build && cd build
         cmake -DFFTX_MAKE_DOCS=True ..
         make Sphinx
+        find . -iname namespacefftx.xml
+        ls /home/runner/work/fftx/fftx/fftx/build/docs/doxygen/xml
+        ls docs
+        ls docs/doxygen/xml
+        cat docs/doxygen/xml/index.xml
+        mv docs/doxygen/html docs/sphinx/html
+        # mv /home/runner/work/fftx/fftx/fftx/build/docs/doxygen/html/ /home/runner/work/fftx/fftx/fftx/build/docs/sphinx/html
+        ls docs/sphinx
         "../docs/buildsite.sh"
       shell: bash
-
