--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -11,31 +11,31 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-software
-        ref: develop
+        ##  ref: develop
         path: spiral
     - name: Checkout repo spiral-package-fftx
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-fftx
-        ref: develop
+        ##  ref: develop
         path: spiral/namespaces/packages/fftx
     - name: Checkout repo spiral-package-simt
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-simt
-        ref: develop
+        ##  ref: develop
         path: spiral/namespaces/packages/simt
     - name: Checkout repo spiral-package-mpi
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-mpi
-        ref: develop
+        ##  ref: develop
         path: spiral/namespaces/packages/mpi
     - name: Checkout repo spiral-package-jit
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-jit
-        ref: develop
+        ##  ref: develop
         path: spiral/namespaces/packages/jit
     - name: Install dependencies
       run: |
@@ -52,14 +52,16 @@ jobs:
       run: |
         cd spiral
         mkdir build && cd build
-        cmake -DCMAKE_INSTALL_PREFIX=$SPIRAL_HOME -D_codegen=CPU .. 
+        cmake .. 
         make -j 2 install
         cd ..
+
     - name: Checkout FFTX
       uses: actions/checkout@v4
       with:
         repository: spiral-software/fftx
-        ref: develop
+        ##  ref: develop
+        ref: ${{ github.ref }}
         path: fftx
     - name: Configure FFTX
       env:
@@ -81,6 +83,7 @@ jobs:
         cmake -DCMAKE_INSTALL_PREFIX=$FFTX_HOME -D_codegen=CPU ..
         make -j 2 install
         cd ..
+
     - name: Run FFTX library examples
       env:
         SPIRAL_HOME: ${{ github.workspace }}/spiral
@@ -90,13 +93,3 @@ jobs:
         ./bin/testverify_lib
         ./bin/testrconv_lib
 
-    # - name: install dependencies
-    #   run: |
-    #     export DEBIAN_FRONTEND=noninteractive
-    #     sudo apt-get -qqq update
-    #     sudo apt-get install -y build-essential ca-certificates cmake pkg-config wget
-    #     sudo apt-get install python3.8
-    #     sudo curl -L -o /usr/local/bin/cmake-easyinstall https://git.io/JvLxY
-    #     sudo chmod a+x /usr/local/bin/cmake-easyinstall
-    #     export CEI_SUDO="sudo"
-      # shell: bash
