added checking for SYCL to MPI examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -26,9 +26,9 @@ manage_add_subdir ( verify        TRUE      TRUE )
 
 ##  MPI examples depend on MPI being installed & accessable
 ##  Looked for MPI at top level CMake
-if ( ${MPI_FOUND} )
+if ( ${MPI_FOUND} AND NOT ${_codegen} STREQUAL "SYCL")
     ##  MPI installation found
-    manage_add_subdir ( 3DDFT_mpi     FALSE     FALSE )
+    manage_add_subdir ( 3DDFT_mpi     FALSE     TRUE )
 else ()
     message ( STATUS "MPI NOT found: No MPI examples will be built" )
 endif ()
